5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1714_2526.log
== TEST (2019-06-29 18:42:03) 
-- CODE:
n = it(input("digite um numero:"))
m = it(input("digite um numero:"))
s = 0
i = 1
while (i < n):
	if (n % i == 0):
		s = s + i
		
	i = i + 1
print(s)
a = 0
b = 0
while (a < m):
	if (m % a == 0):
		b = b + a

	a = a + 1
print(b)
if (s == b):
	print("AMIGOS")
	
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = it(input())
NameError: name 'it' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 18:42:28) 
-- CODE:
n = int(input("digite um numero:"))
m = int(input("digite um numero:"))
s = 0
i = 1
while (i < n):
	if (n % i == 0):
		s = s + i
		
	i = i + 1
print(s)
a = 0
b = 0
while (a < m):
	if (m % a == 0):
		b = b + a

	a = a + 1
print(b)
if (s == b):
	print("AMIGOS")
	
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if (m % a == 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 18:42:57) 
-- CODE:
n = int(input("digite um numero:"))
m = int(input("digite um numero:"))
s = 0
i = 1
while (i < n):
	if (n % i == 0):
		s = s + i
		
	i = i + 1
print(s)
a = 1
b = 0
while (a < m):
	if (m % a == 0):
		b = b + a

	a = a + 1
print(b)
if (s == b):
	print("AMIGOS")
	
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 18:43:44) 
-- CODE:
n = int(input("digite um numero:"))
m = int(input("digite um numero:"))
s = 0
i = 1
while (i < n):
	if (n % i == 0):
		s = s + i
		
	i = i + 1
print(s)
a = 1
b = 0
while (a < m):
	if (m % a == 0):
		b = b + a

	a = a + 1
print(b)
if (s == b):
	print("AMIGOS")
	
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 18:45:00) 
-- CODE:
n = int(input("digite um numero:"))
m = int(input("digite um numero:"))
s = 0
i = 1
while (i < n):
	if (n % i == 0):
		s = s + i
		
	i = i + 1
print(s)
a = 1
b = 0
while (a < m):
	if (m % a == 0):
		b = b + a

	a = a + 1
print(b)
if (s == m) and (a == n):
	print("AMIGOS")
	
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 18:46:49) 
-- CODE:
n = int(input("digite um numero:"))
m = int(input("digite um numero:"))
s = 0
i = 1
while (i < n):
	if (n % i == 0):
		s = s + i
		
	i = i + 1
print(s)
a = 1
b = 0
while (a < m):
	if (m % a == 0):
		b = b + a

	a = a + 1
print(b)


if (s == m) and (b == n):
	print("AMIGOS")
	
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 18:47:08) 
-- CODE:
n = int(input("digite um numero:"))
m = int(input("digite um numero:"))
s = 0
i = 1
while (i < n):
	if (n % i == 0):
		s = s + i
		
	i = i + 1
print(s)
a = 1
b = 0
while (a < m):
	if (m % a == 0):
		b = b + a

	a = a + 1
print(b)


if (s == m) and (b == n):
	print("AMIGOS")
	
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.621911
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
